# Raytracer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  benchmark.sh  smoke_test.sh
.github/workflows/: format.yml  mirror.yml  run-tests.yml
plugins/: AmbientLightPlugin.cpp  AmbientLightPlugin.hpp  ChessBoardMaterialPlugin.cpp  ChessBoardMaterialPlugin.hpp  Cone.cpp  Cone.hpp  ConePlugin.cpp  ConePlugin.hpp  CylinderPlugin.cpp  CylinderPlugin.hpp  DiffuseLightPlugin.cpp  DiffuseLightPlugin.hpp  FlatMaterialPlugin.cpp  FlatMaterialPlugin.hpp  MirrorMaterialPlugin.cpp  MirrorMaterialPlugin.hpp  ObjectPlugin.cpp  ObjectPlugin.hpp  PlanePlugin.cpp  PlanePlugin.hpp  PointLightPlugin.cpp  PointLightPlugin.hpp  SpherePlugin.cpp  SpherePlugin.hpp  SteelMaterial.hpp  SteelMaterialPlugin.cpp  SteelMaterialPlugin.hpp
scenes/: base.scene  childScene.scene  cone.scene  steel.scene
src/: main.cpp
src/Builder/: SceneBuilder.cpp  SceneBuilder.hpp
src/Core/: ALight.hpp  AMaterial.hpp  APrimitive.hpp  BoundingBox.hpp  Camera.hpp  Color.cpp  Color.hpp  ILight.hpp  IMaterial.hpp  IPrimitive.hpp  Intersection.cpp  Intersection.hpp  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/Exceptions/: OutputException.hpp  RaytracerException.hpp
src/Factory/: LightFactory.hpp  MaterialFactory.hpp  PrimitiveFactory.hpp
src/Lights/: AmbientLight.hpp  DiffuseLight.hpp  PointLight.hpp
src/Materials/: FlatMaterial.cpp  FlatMaterial.hpp  MirrorMaterial.cpp  MirrorMaterial.hpp  SteelMaterial.cpp  SteelMaterial.hpp
src/Math/: Matrix.hpp  Point.hpp  Rectangle.hpp  Transform.hpp  Vector.hpp  Vector3.hpp
src/Parser/: SceneParser.cpp  SceneParser.hpp
src/Plugin/: IPlugin.hpp  LightPlugin.hpp  MaterialPlugin.hpp  PluginManager.cpp  PluginManager.hpp  PrimitivePlugin.hpp
src/Primitives/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
src/UI/: Button.hpp  GUI.cpp  GUI.hpp  Slider.hpp
src/Utility/: Clamped.hpp
tests/: test_AmbientLight.cpp  test_Camera.cpp  test_Cylinder.cpp  test_FlatMaterial.cpp  test_Intersection.cpp  test_Matrix.cpp  test_MirrorMaterial.cpp  test_Point.cpp  test_Ray.cpp  test_Rectangle.cpp  test_Renderer.cpp  test_Rotation.cpp  test_Scale.cpp  test_Scene.cpp  test_SceneParser.cpp  test_Shear.cpp  test_Sphere.cpp  test_Transform.cpp  test_Vector.cpp
